--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,7 +4,7 @@ on:
     branches: ["main"]
     tags: ["v*"]
   pull_request:
-    branches: ["*"]
+    branches: ["main"]
 
 jobs:
   build:
@@ -30,7 +30,7 @@ jobs:
 
       - name: Publish ${{ github.ref }}
         run: sbt ci-release
-        if: startsWith(github.ref, 'refs/tags/v')
+        if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || (github.ref == 'refs/heads/main'))
         env:
           PGP_PASSPHRASE: ${{ secrets.PGP_PASSPHRASE }}
           PGP_SECRET: ${{ secrets.PGP_SECRET }}
